:test_tube: configuration de pnpm

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -46,11 +46,11 @@ jobs:
         run: |
           APP_NAME="${{ github.event.inputs.app_name }}"
           echo "Le nom de l'environnement est $APP_NAME"
-          node --max-old-space-size=4096 npm install
           clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID"
           clever env set CC_WEBROOT "/out" --alias "$APP_NAME"
-          clever env set CC_PRE_BUILD_HOOK "npm install" --alias "$APP_NAME"
-          clever env set CC_POST_BUILD_HOOK "npm run build" --alias "$APP_NAME"
+          clever env set CC_PRE_BUILD_HOOK "npm install -g pnpm" --alias "$APP_NAME"
+          clever env set CC_NODE_BUILD_TOOL "custom" --alias "$APP_NAME"
+          clever env set CC_CUSTOM_BUILD_TOOL "pnpm install && pnpm build" --alias "$APP_NAME"
           clever env set CC_OVERRIDE_BUILDCACHE "/out" --alias "$APP_NAME"
           clever domain add "$APP_NAME.cleverapps.io" --alias "$APP_NAME"
           clever deploy --alias "$APP_NAME"
