--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,7 +1,8 @@
 name: Clever Cloud Review App
 
 on:
-  push:
+  pull_request:
+    types: [synchronize, reopened, closed]
   workflow_dispatch:
     inputs:
       branch:
@@ -68,7 +69,7 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update:
-    if: github.event.name == 'push'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
       issues: write
