:test_tube: configuration de pnpm

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -81,9 +81,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+      - name: Extract branch name
+        id: branch_name
+        run: echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})
       - name: install clever-tools
         run: npm install -g clever-tools
       - name: Link and update app
@@ -92,7 +94,7 @@ jobs:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          APP_NAME="${{ github.event.inputs.app_name }}"
+          APP_NAME="${{ steps.branch_name.outputs.branch }}"
           clever link -o "$ORGA_ID" "$APP_NAME" || echo "Application $APP_NAME not found, skipping link."
           clever deploy --alias "$APP_NAME" --force
   delete:
