:test_tube: PR de test

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,14 +1,14 @@
 name: Clever Cloud Review App
 
 on:
+  push:
   pull_request:
     types: [synchronize, reopened, closed]
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Execution manuelle du workflow'
+        description: "Execution manuelle du workflow"
         required: true
-        default: 'md/configurationCICD'
       app_name:
         description: "Nom de l'environnement à déployer"
         required: true
@@ -27,8 +27,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.repository }}
+          ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - run: echo "Le repository cloné est ${{ github.repository }} a été cloné dans le runner de GitHub"
@@ -39,37 +39,38 @@ jobs:
       - name: Installation de clever-tools
         run: npm install -g clever-tools
       - name: Création et deploiement de l'application
-        env: 
+        env:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
+          NODE_PATH: ${{ github.workspace }}/node_modules
         run: |
           APP_NAME="${{ github.event.inputs.app_name }}"
           echo "Le nom de l'environnement est $APP_NAME"
           clever create --type static-apache "$APP_NAME" --alias "$APP_NAME" --region par --org "$ORGA_ID"
           clever env set CC_WEBROOT "/out" --alias "$APP_NAME"
-          clever env set CC_PRE_BUILD_HOOK "npm install" --alias "$APP_NAME"
-          clever env set CC_POST_BUILD_HOOK "npm run build" --alias "$APP_NAME"
+          clever env set CC_PRE_BUILD_HOOK "npm install -g pnpm" --alias "$APP_NAME"
+          clever env set CC_NODE_BUILD_TOOL "custom" --alias "$APP_NAME"
+          clever env set CC_CUSTOM_BUILD_TOOL "pnpm install && pnpm build" --alias "$APP_NAME"
           clever env set CC_OVERRIDE_BUILDCACHE "/out" --alias "$APP_NAME"
           clever domain add "$APP_NAME.cleverapps.io" --alias "$APP_NAME"
           clever deploy --alias "$APP_NAME"
-      - name: Informations relatives à l'environnement
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.inputs.app_name }}.cleverapps.io)`;
-            const issue_number = context.payload.pull_request.number
-            github.rest.issues.createComment({
-              issue_number: issue_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: `Déploiement de l'environnement pour ${{ github.event.inputs.app_name }}`,
-              body: message
-            });
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Informations relatives à l'environnement
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const message = `Environnement déployé avec succès accessible [ici](https://${{ github.event.inputs.app_name }}.cleverapps.io)`;
+      #       const branchName = ${{ github.event.inputs.branch_name }};
+      #       github.rest.issues.createComment({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         title: `Déploiement de l'environnement pour ${branchName}`,
+      #         body: message
+      #       });
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update:
-    if: github.event.action == 'synchronize'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
       issues: write
@@ -79,10 +80,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.repository }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+      - name: Extract branch name
+        id: branch_name
+        run: echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})
       - name: install clever-tools
         run: npm install -g clever-tools
       - name: Link and update app
@@ -90,29 +93,16 @@ jobs:
           CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
-        run: | 
-          APP_NAME="${{ github.event.inputs.app_name }}"
+        run: |
+          APP_NAME="${{ steps.branch_name.outputs.branch }}"
           clever link -o "$ORGA_ID" "$APP_NAME" || echo "Application $APP_NAME not found, skipping link."
           clever deploy --alias "$APP_NAME" --force
-      - name: Comment PR
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const message = `🚀 L'environnement à été mis à jour et est disponible [ici](https://${{ github.event.inputs.app_name}}.cleverapps.io)`;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: message
-            });
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   delete:
     runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
-    if: always() && github.event.action == 'closed'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
     steps:
       - name: install clever-tools
         run: npm install -g clever-tools
