--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -104,6 +104,9 @@ jobs:
       pull-requests: write
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     steps:
+      - name: Extract branch name
+        id: branch_name
+        run: echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})
       - name: install clever-tools
         run: npm install -g clever-tools
       - name: Delete app
@@ -112,18 +115,5 @@ jobs:
           CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
           ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
-          clever link -o "$ORGA_ID" ${{ github.event.inputs.app_name }}
-          clever delete --alias ${{ github.event.inputs.app_name }} --yes
-      - name: Comment PR
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const message = `L'environnement de test a été supprimé avec succès 👋`;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: message
-            });
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          clever link -o "$ORGA_ID" ${{ steps.branch_name.outputs.branch }}
+          clever delete --alias ${{ steps.branch_name.outputs.branch }} --yes
