--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
   "packageRules": [
     {
       "matchPackagePatterns": ["*"],
+      "excludePackagePatterns": ["^eslint"],
       "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
