--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,10 @@
       "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
+    },
+    {
+      "matchPackagePatterns": ["^eslint"],
+      "enabled": false
     }
   ]
 }
