:sparkles: Mise en place du squelette du site

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "AGPL-3.0",
   "type": "module",
   "scripts": {
-    "amibroken": "pnpm lint:css && pnpm typecheck && pnpm lint:ts && pnpm test:coverage",
+    "amibroken": "pnpm typecheck && pnpm lint:ts && pnpm test:coverage",
     "build": "next build",
     "deadcode": "knip",
     "depcheck": "depcheck",
