--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,7 +1,6 @@
 name: Clever Cloud Review App
 
 on:
-  push:
   pull_request:
     types: [synchronize, reopened, closed]
   workflow_dispatch:
@@ -68,7 +67,7 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update:
-    if: github.event_name == 'push'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.branch == github.ref_name
     runs-on: ubuntu-latest
     permissions:
       issues: write
