:sparkles: Installation et configuration de Sentry

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,7 @@
   "include": [
     "next-env.d.ts",
     "vitest.d.ts",
+    "next.config.mjs",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
