--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@gouvfr/dsfr": "^1.11.2",
+    "@sentry/nextjs": "^8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
