--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -65,6 +65,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
+          ref: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - name: install clever-tools
