:test_tube: refacto de la CI

--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -12,10 +12,6 @@ on:
           - deploy
           - update
           - delete
-env:
-  CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
-  CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
-  ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
 jobs:
   deploy:
     if: github.event.inputs.action == 'deploy'
@@ -27,7 +23,7 @@ jobs:
     environment:
       name: review/${{ github.event.number }}
     steps:
-      - run: echo "Le nom de la branche est $BRANCH_NAME et le nom du repository est ${{ github.repository }}"
+      - run: echo "Le nom de la branche est ${{ github.ref_name }} et le nom du repository est ${{ github.repository }}"
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -44,11 +40,11 @@ jobs:
         run: npm install -g clever-tools
       - name: Création et deploiement de l'application
         env:
-          CLEVER_TOKEN: $CLEVER_TOKEN
-          CLEVER_SECRET: $CLEVER_SECRET
-          ORGA_ID: $ORGA_ID
-          BRANCH_NAME: ${{ github.ref_name }}
+          CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
+          CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
+          ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
+          BRANCH_NAME="${{ github.ref_name }}"
           echo "Le nom de l'environnement est $BRANCH_NAME"
           clever create --type static-apache "$BRANCH_NAME" --alias "$BRANCH_NAME" --region par --org "$ORGA_ID"
           clever env set CC_WEBROOT "/out" --alias "$BRANCH_NAME"
@@ -68,18 +64,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          ref: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - name: install clever-tools
         run: npm install -g clever-tools
       - name: Link and update app
         env:
-          CLEVER_SECRET: $CLEVER_SECRET
-          CLEVER_TOKEN: $CLEVER_TOKEN
-          ORGA_ID: $ORGA_ID
-          BRANCH_NAME: ${{ github.ref_name }}
+          CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
+          CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
+          ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
+          BRANCH_NAME="${{ github.ref_name }}"
           clever link -o "$ORGA_ID" "$BRANCH_NAME" || echo "Application $BRANCH_NAME not found, skipping link."
           clever deploy --alias "$BRANCH_NAME" --force
   delete:
@@ -93,10 +88,10 @@ jobs:
         run: npm install -g clever-tools
       - name: Supprimer l'application
         env:
-          CLEVER_SECRET: $CLEVER_SECRET
-          CLEVER_TOKEN: $CLEVER_TOKEN
-          ORGA_ID: $ORGA_ID
-          BRANCH_NAME: ${{ github.ref_name }}
+          CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
+          CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
+          ORGA_ID: ${{ secrets.CLEVER_ORGA_ID }}
         run: |
+          BRANCH_NAME="${{ github.ref_name }}"
           clever link -o "$ORGA_ID" "$BRANCH_NAME"
           clever delete --alias "$BRANCH_NAME" --yes
