:sparkles: Husky n'est plus lancé en production

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint . --ext .tsx,.ts --max-warnings=0",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "pnpm test -- --coverage",
@@ -23,7 +23,6 @@
     "@sentry/nextjs": "^8",
     "@types/node": "^20.12.13",
     "@types/react": "^18.3.3",
-    "husky": "^9.0.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -47,6 +46,7 @@
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-vitest": "^0.4.1",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "knip": "^5.16.0",
     "stylelint": "^16.5.0",
