--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "suite-gestionnaire-numerique",
   "version": "0.1.0",
   "license": "AGPL-3.0",
-  "type": "module",
   "scripts": {
-    "amibroken": "pnpm typecheck && pnpm lint:ts && pnpm test:coverage",
     "build": "next build",
+    "check": "yarn dedupe --check && yarn typecheck && yarn lint:ts && yarn test:coverage",
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": "next dev",
@@ -14,7 +13,7 @@
     "prepare": "husky || true",
     "start": "next start",
     "test": "vitest run",
-    "test:coverage": "pnpm test -- --coverage",
+    "test:coverage": "yarn test --coverage",
     "test:watch": "vitest",
     "typecheck": "tsc"
   },
@@ -29,6 +28,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
@@ -54,5 +54,9 @@
     "stylelint-order": "^6.0.4",
     "vitest": "^1.6.0",
     "vitest-dom": "^0.1.1"
-  }
+  },
+  "engines": {
+    "node": "20.14.0"
+  },
+  "packageManager": "yarn@4.2.2"
 }
