--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: "weekly"
       day: "monday"
     ignore:
-      - dependency-name: "*eslint"
+      - dependency-name: "*eslint*"
     groups:
       minor-and-patch:
         update-types:
