--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "yarn test --coverage",
+    "test:mutation:frontend": "npx stryker run stryker-frontend.conf.json",
+    "test:mutation:backend": "npx stryker run stryker-backend.conf.json",
     "test:watch": "vitest",
     "typecheck": "tsc"
   },
@@ -28,6 +30,9 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@stryker-mutator/core": "^8.2.6",
+    "@stryker-mutator/typescript-checker": "^8.2.6",
+    "@stryker-mutator/vitest-runner": "^8.2.6",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/react-dom": "^18",
