--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^8.2.6",
