chore(git hooks/husky): replace "prepare" script with "postinstall"
As Yarn doesn't support the package.json "prepare" lifecycle hook.

See:
https://github.com/yarnpkg/berry/issues/2967
https://typicode.github.io/husky/how-to.html#manual-setup

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint src --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
-    "prepare": "husky || true",
+    "postinstall": "husky || true",
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "yarn test --coverage",
