--- a/package.json
+++ b/package.json
@@ -23,13 +23,9 @@
   "dependencies": {
     "@gouvfr/dsfr": "^1.12.1",
     "@sentry/nextjs": "^8",
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.3.3",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5.5.3",
-    "vite-tsconfig-paths": "^4.3.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^8.2.6",
@@ -37,6 +33,8 @@
     "@stryker-mutator/vitest-runner": "^8.2.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
@@ -59,6 +57,8 @@
     "stylelint": "^16.7.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
+    "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4",
     "vitest-dom": "^0.1.1"
   },
