Ajout de deux règles stylelint
- color-no-hex pour ne pas utiliser l'hexadécimal mais plutôt les constantes du DSFR
- unit-disallowed-list pour utiliser uniquement des unités zoomable donc accessible

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,14 +6,16 @@
     "stylelint-order"
   ],
   "rules": {
+    "color-no-hex": true,
     "selector-class-pattern": null,
     "selector-id-pattern": null,
-    "order/properties-alphabetical-order": true,
     "selector-pseudo-class-no-unknown": [
       true,
       {
         "ignorePseudoClasses": ["global"]
       }
-    ]
+    ],
+    "unit-disallowed-list": ["px"],
+    "order/properties-alphabetical-order": true
   }
 }
