--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,8 +45,7 @@
     "vitest.d.ts",
     "next.config.mjs",
     "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
+    "**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
