:sparkles: L'en-tête a toujours le même logo FNE

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,18 +34,23 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     },
     "types": [
       "vitest/globals"
-    ],
+    ]
   },
   "include": [
     "next-env.d.ts",
     "vitest.d.ts",
     "next.config.mjs",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
