Mise en place du SSO

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+NODE_ENV=development
+
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET=A_REMPLIR
+PRO_CONNECT_CLIENT_ID=A_REMPLIR
+PRO_CONNECT_CLIENT_SECRET=A_REMPLIR
+PRO_CONNECT_URL=A_REMPLIR
+
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=local
 
 NEXT_PUBLIC_SENTRY_DSN=$SENTRY_DSN
 NEXT_PUBLIC_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT
-
