--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@gouvfr/dsfr": "^1.12.1",
     "@sentry/nextjs": "^8",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -31,6 +32,7 @@
     "@stryker-mutator/core": "^8.2.6",
     "@stryker-mutator/typescript-checker": "^8.2.6",
     "@stryker-mutator/vitest-runner": "^8.2.6",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^22.0.0",
