chore: add and configure Prettier and Editorconfig file

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "bash:production": "scalingo -a suite-gestionnaire-numerique run bash",
     "build": "yarn prisma:migrate && yarn prisma:generate:fne && next build",
-    "check": "yarn dedupe --check && yarn typecheck && yarn lint:ts && yarn test:coverage",
+    "check": "yarn dedupe --check && yarn typecheck && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": "yarn prisma:migrate && yarn prisma:generate:fne && next dev",
+    "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
+    "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint src seeds --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
     "migration:utilisateur": "ts-node -T seeds/utilisateur.ts",
@@ -70,6 +72,7 @@
     "husky": "^9.1.4",
     "jsdom": "^24.1.1",
     "knip": "^5.27.1",
+    "prettier": "^3.3.3",
     "prisma": "^5.18.0",
     "stylelint": "^16.8.1",
     "stylelint-config-standard": "^36.0.1",
